--- a/.github/workflows/update.yaml
+++ b/.github/workflows/update.yaml
@@ -15,7 +15,7 @@ jobs:
     - name: Install environment deps
       run: |
         apt-get update -y
-        apt-get install --no-install-recommends -y python3-dev python3-pip
+        apt-get install --no-install-recommends -y python3-dev python3-pip git
     - name: update Blocklist
       run: |
         pip3 install -r src/requirements.txt
