--- a/.github/workflows/update.yaml
+++ b/.github/workflows/update.yaml
@@ -14,8 +14,8 @@ jobs:
     - uses: actions/checkout@v2
     - name: Install environment deps
       run: |
-        apt-get update -y
-        apt-get install --no-install-recommends -y python3-dev python3-pip git
+        sudo apt-get update -y
+        sudo apt-get install --no-install-recommends -y python3-dev python3-pip git
     - name: update Blocklist
       run: |
         pip3 install -r src/requirements.txt
